--- a/layouts--flexbox/index.html
+++ b/layouts--flexbox/index.html
@@ -4,11 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flexbox Layout</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section class="container">
+        <header>Header</header>
+        <main>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque culpa asperiores quibusdam suscipit
+            corporis molestiae consequuntur laudantium dicta ipsa. Reprehenderit culpa magni odit reiciendis recusandae,
+            veritatis modi? Quis, impedit quae!</main>
+        <aside id="aside-1">Aside 1</aside>
+        <aside id="aside-2">Aside 2</aside>
+        <footer>Footer</footer>
+    </section>
 </body>
 
 </html>
