--- a/layouts--flexbox/index.html
+++ b/layouts--flexbox/index.html
@@ -11,11 +11,14 @@
 <body>
     <section class="container">
         <header>Header</header>
-        <main>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque culpa asperiores quibusdam suscipit
-            corporis molestiae consequuntur laudantium dicta ipsa. Reprehenderit culpa magni odit reiciendis recusandae,
-            veritatis modi? Quis, impedit quae!</main>
-        <aside id="aside-1">Aside 1</aside>
-        <aside id="aside-2">Aside 2</aside>
+        <div class="row-container">
+            <main>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque culpa asperiores quibusdam suscipit
+                corporis molestiae consequuntur laudantium dicta ipsa. Reprehenderit culpa magni odit reiciendis
+                recusandae,
+                veritatis modi? Quis, impedit quae!</main>
+            <aside id="aside-1">Aside 1</aside>
+            <aside id="aside-2">Aside 2</aside>
+        </div>
         <footer>Footer</footer>
     </section>
 </body>
