--- a/layouts--flexbox/index.html
+++ b/layouts--flexbox/index.html
@@ -10,16 +10,26 @@
 
 <body>
     <section class="container">
-        <header>Header</header>
+        <header>
+            <h1>Header</h1>
+        </header>
         <div class="row-container">
-            <main>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque culpa asperiores quibusdam suscipit
-                corporis molestiae consequuntur laudantium dicta ipsa. Reprehenderit culpa magni odit reiciendis
-                recusandae,
-                veritatis modi? Quis, impedit quae!</main>
-            <aside id="aside-1">Aside 1</aside>
-            <aside id="aside-2">Aside 2</aside>
+            <main>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque culpa asperiores quibusdam suscipit
+                    corporis molestiae consequuntur laudantium dicta ipsa. Reprehenderit culpa magni odit reiciendis
+                    recusandae,
+                    veritatis modi? Quis, impedit quae!</p>
+            </main>
+            <aside id="aside-1">
+                <h1>Aside 1</h1>
+            </aside>
+            <aside id="aside-2">
+                <h1>Aside 2</h1>
+            </aside>
         </div>
-        <footer>Footer</footer>
+        <footer>
+            <h1>Footer</h1>
+        </footer>
     </section>
 </body>
 
