major code changes

--- a/layouts--flexbox/index.html
+++ b/layouts--flexbox/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1>Header</h1>
         </header>
-        <div class="row-container">
+        <section class="row-container">
             <main>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque culpa asperiores quibusdam suscipit
                     corporis molestiae consequuntur laudantium dicta ipsa. Reprehenderit culpa magni odit reiciendis
@@ -26,7 +26,7 @@
             <aside id="aside-2">
                 <h1>Aside 2</h1>
             </aside>
-        </div>
+        </section>
         <footer>
             <h1>Footer</h1>
         </footer>
